compiler/lib/test/parser_golden/fstring_missing_expression.golden
ERROR: 1:2:
  |
1 | f"Missing expression {:10}"
  |  ^^^
unexpected ""Mi"
expecting "%=", "&=", "**=", "*=", "+=", "-=", "//=", "/=", "<<=", ">>=", "@=", "^=", "|=", ':', '=', call arguments, slice/index expression, or comma
